--- a/index.html
+++ b/index.html
@@ -4633,65 +4633,65 @@
         </div>
 -->        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP564-L.jpg" title="CODIGO: YP564 S/2.10" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP564-L.jpg" title="CODIGO: YP564 S/2.10" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP564 S/2.10 X3 UNIDADES</h4>
               </div>
-              <img src="img/portfolio/YP564-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP564-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP565-L.jpg" title="CODIGO: YP565 S/1.80" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP565-L.jpg" title="CODIGO: YP565 S/1.80" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP565 S/1.80 X3 UNIDADES</h4>
               </div>
-              <img src="img/portfolio/YP565-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP565-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP566-L.jpg" title="CODIGO: YP566 S/9.50" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP566-L.jpg" title="CODIGO: YP566 S/9.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
                 <h4>CODIGO: YP566 S/9.50</h4>
               </div>
-              <img src="img/portfolio/YP566-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP566-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP567-L.jpg" title="CODIGO: YP567 S/22.50" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP567-L.jpg" title="CODIGO: YP567 S/22.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP567 S/22.50</h4>
               </div>
-              <img src="img/portfolio/YP567-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP567-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP568-L.jpg" title="CODIGO: YP568 S/22.50" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP568-L.jpg" title="CODIGO: YP568 S/22.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
                 <h4>CODIGO: YP568 S/22.50</h4>
               </div>
-              <img src="img/portfolio/YP568-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP568-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP569-L.jpg" title="CODIGO: YP569 S/9.30" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP569-L.jpg" title="CODIGO: YP569 S/9.30" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP569 S/9.30</h4>
               </div>
-              <img src="img/portfolio/YP569-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP569-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP570-L.jpg" title="CODIGO: YP570 S/15.90" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP570-L.jpg" title="CODIGO: YP570 S/15.90" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP570 S/15.90 X25 UNIDADES</h4>
               </div>
-              <img src="img/portfolio/YP570-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP570-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>		
  		  
