--- a/index.html
+++ b/index.html
@@ -4253,16 +4253,16 @@
               <img src="img/portfolio/YP419-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-<!--        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
+        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP420-L.jpg" title="CODIGO: YP420" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolios/YP420-L.jpg" title="CODIGO: YP420" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP420</h4>
               </div>
-              <img src="img/portfolio/YP420-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolios/YP420-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>		
--->        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
+       <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP421-L.jpg" title="CODIGO: YP421  S/9.20" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
