--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="intro-text">
             <h1>Yaplin</h1>
-            <p>Útiles Escolar / Cuadernos Y Blocks / Papelerías / Escrituras / Arte y Pinturas</p>
+            <p>Útiles Escolares / Cuadernos y Blocks / Papelerías / Escrituras / Arte y Pintura</p>
             <a href="#about" class="btn btn-custom btn-lg page-scroll">QUIENES SOMOS</a> </div>
         </div>
       </div>
