--- a/index.html
+++ b/index.html
@@ -3866,7 +3866,7 @@
               <img src="img/portfolio/YP376-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
+ <!--       <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP377-L.jpg" title="CODIGO: YP377  S/3.10" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -3874,7 +3874,7 @@
               </div>
               <img src="img/portfolio/YP377-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
-        </div>			  
+        </div> -->			  
 <!--        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP378-L.jpg" title="CODIGO: YP378" data-lightbox-gallery="gallery1">
