--- a/index.html
+++ b/index.html
@@ -344,16 +344,16 @@
               <img src="img/portfolio/YP022-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-<!--        <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
+        <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP023-L.jpg" title="CODIGO: YP023" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP023-L.jpg" title="CODIGO: YP023  S/8.90" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
-                <h4>CODIGO: YP023</h4>
+                <h4>CODIGO: YP023  S/8.90</h4>
               </div>
               <img src="img/portfolio/YP023-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
--->        <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
+        <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP024-L.jpg" title="CODIGO: YP024  S/7.20" data-lightbox-gallery="gallery1">
               <div class="hover-text">
