--- a/index.html
+++ b/index.html
@@ -5335,7 +5335,7 @@
       <div class="col-md-10 col-md-offset-1 section-title">
         <h2>Hacer su pedido</h2>
         <hr>
-        <p>EN CUATRO SIMPLES PASOS.</p>
+        <p>EN UN SOLO PASO.</p>
       </div>
       <div id="row">
      <!--   <div class="col-md-4 team">
