--- a/index.html
+++ b/index.html
@@ -5350,7 +5350,7 @@
         <div class="col-md-4 team">
           <div class="thumbnail">
             <!--<div class="team-img"><img src="img/team/02.jpg" alt="..."></div>-->
-			 <div class="portfolio-item"><a href="https://wa.me/c/51927795311" ><img src="img/team/02.jpg" alt="..."></a></div>
+			<!-- <div class="portfolio-item"><a href="https://wa.me/c/51927795311" ><img src="img/team/02.jpg" alt="..."></a></div>
             <div class="caption">
               <h3>Paso 2</h3>
               <p>Has click para ir al catalogo de Whatsapp</p>
