--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			  <li><a href="#" data-filter=".tijera">Tijeras y tajadores</a></li>
 			  <li><a href="#" data-filter=".regla">Reglas</a></li>
 			  <li><a href="#" data-filter=".corrector">Correctores</a></li>
-              <li><a href="#" data-filter=".cartuchera">Cartucheras</a></li>
+                          <li><a href="#" data-filter=".cartuchera">Cartucheras</a></li>
 			 <!-- <li><a href="#" data-filter=".mochila">Mochilas</a></li>-->
 			  <li><a href="#" data-filter=".cinta">Cintas y pegamentos</a></li>
 			  <li><a href="#" data-filter=".otro">Otros</a></li>
@@ -150,7 +150,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP001-L.jpg" title="CODIGO: YP001 S/5.60" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP001 S/5.60</h4>
+                <h4>CODIGO: YP001<span class="reducedfrom"> <br> S/7</span>S/5.60</h4>
               </div>
               <img src="img/portfolio/YP001-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
