--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               <img src="img/portfolio/YP025-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-<!--        <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
+        <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP026-L.jpg" title="CODIGO: YP026" data-lightbox-gallery="gallery1">
               <div class="hover-text">
@@ -461,7 +461,7 @@
               <img src="img/portfolio/YP035-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
--->
+
 		  
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
