--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP024-L.jpg" title="CODIGO: YP024  S/7.20" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP024-L.jpg" title="CODIGO: YP024  S/6.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP024  S/7.20</h4>
+                <h4>CODIGO: YP024<span class="reducedfrom"> <br> S/7.20</span>S/6.50</h4>
               </div>
               <img src="img/portfolio/YP024-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -373,90 +373,90 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP026-L.jpg" title="CODIGO: YP026" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP026-L.jpg" title="CODIGO: YP026  S/7.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP026</h4>
+                <h4>CODIGO: YP026<span class="reducedfrom"> <br> </span>S/7.50</h4>
               </div>
               <img src="img/portfolio/YP026-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP027-L.jpg" title="CODIGO: YP027" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP027-L.jpg" title="CODIGO: YP027 S/5.80" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP027</h4>
+                <h4>CODIGO: YP027<span class="reducedfrom"> <br> </span>S/5.80</h4>
               </div>
               <img src="img/portfolio/YP027-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP028-L.jpg" title="CODIGO: YP028" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP028-L.jpg" title="CODIGO: YP028  S/4.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP028</h4>
+                <h4>CODIGO: YP028<span class="reducedfrom"> <br> </span>S/4.50</h4>
               </div>
               <img src="img/portfolio/YP028-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP029-L.jpg" title="CODIGO: YP029" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP029-L.jpg" title="CODIGO: YP029  S/4.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP029</h4>
+                <h4>CODIGO: YP029<span class="reducedfrom"> <br> </span>S/4.50</h4>
               </div>
               <img src="img/portfolio/YP029-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP030-L.jpg" title="CODIGO: YP030" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP030-L.jpg" title="CODIGO: YP030  S/5.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP030<completa></completa></h4>
+                <h4>CODIGO: YP030<span class="reducedfrom"> <br> </span>S/5.50</h4>
               </div>
               <img src="img/portfolio/YP030-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP031-L.jpg" title="CODIGO: YP031" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP031-L.jpg" title="CODIGO: YP031  S/5.60" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP031<completa></completa></h4>
+                <h4>CODIGO: YP031<span class="reducedfrom"> <br> </span>S/5.60</h4>
               </div>
               <img src="img/portfolio/YP031-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP032-L.jpg" title="CODIGO: YP032" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP032-L.jpg" title="CODIGO: YP032  S/5.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP032<completa></completa></h4>
+                <h4>CODIGO: YP032<span class="reducedfrom"> <br> </span>S/5.50</h4>
               </div>
               <img src="img/portfolio/YP032-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP033-L.jpg" title="CODIGO: YP033" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP033-L.jpg" title="CODIGO: YP033  S/11.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP033<completa></completa></h4>
+                <h4>CODIGO: YP033<span class="reducedfrom"> <br> </span>S/11.50</h4>
               </div>
               <img src="img/portfolio/YP033-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP034-L.jpg" title="CODIGO: YP034" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP034-L.jpg" title="CODIGO: YP034  S/22.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP034<completa></completa></h4>
+                <h4>CODIGO: YP034<span class="reducedfrom"> <br> </span>S/22.50</h4>
               </div>
               <img src="img/portfolio/YP034-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP035-L.jpg" title="CODIGO: YP035" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP035-L.jpg" title="CODIGO: YP035  S/7.00" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP035<completa></completa></h4>
+                <h4>CODIGO: YP035<span class="reducedfrom"> <br> </span>S/7.00</h4>
               </div>
               <img src="img/portfolio/YP035-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -546,36 +546,36 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP517-L.jpg" title="CODIGO: YP517 S/6.90" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP517-L.jpg" title="CODIGO: YP517 S/3.90" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP517 S/6.90<completa></completa></h4>
+                <h4>CODIGO: YP517<span class="reducedfrom"> <br> </span>S/3.90</h4>
               </div>
               <img src="img/portfolio/YP517-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP518-L.jpg" title="CODIGO: YP518 S/6.90" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP518-L.jpg" title="CODIGO: YP518 S/6.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP518 S/6.90<completa></completa></h4>
+                <h4>CODIGO: YP518<span class="reducedfrom"> <br> </span>S/6.50</h4>
               </div>
               <img src="img/portfolio/YP518-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP519-L.jpg" title="CODIGO: YP519 S/6.90" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP519-L.jpg" title="CODIGO: YP519 S/6.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP519 S/6.90<completa></completa></h4>
+                <h4>CODIGO: YP519<span class="reducedfrom"> <br> </span>S/6.50</h4>
               </div>
               <img src="img/portfolio/YP519-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP520-L.jpg" title="CODIGO: YP520 S/6.90" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP520-L.jpg" title="CODIGO: YP520 S/6.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP520 S/6.90<completa></completa></h4>
+                <h4>CODIGO: YP520<span class="reducedfrom"> <br> </span>S/6.50</h4>
               </div>
               <img src="img/portfolio/YP520-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -618,9 +618,9 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP525-L.jpg" title="CODIGO: YP525 S/4.10" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP525-L.jpg" title="CODIGO: YP525 S/6.90" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP525 S/4.10<completa></completa></h4>
+                <h4>CODIGO: YP525<span class="reducedfrom"> <br> </span>S/6.90</h4>
               </div>
               <img src="img/portfolio/YP525-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
