--- a/index.html
+++ b/index.html
@@ -757,9 +757,9 @@
 		  
         <div class="col-sm-6 col-md-4 col-lg-4 colores">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP036-L.jpg" title="CODIGO: YP036  S/4.20" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP036-L.jpg" title="CODIGO: YP036  S/3.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP036  S/4.20</h4>
+                <h4>CODIGO: YP036<span class="reducedfrom"> <br> S/4.20</span>S/3.50</h4>
               </div>
               <img src="img/portfolio/YP036-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
