--- a/index.html
+++ b/index.html
@@ -4444,18 +4444,18 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP543-L.jpg" title="CODIGO: YP543 S/1.5" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP543-L.jpg" title="CODIGO: YP543 S/1.00" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
-                <h4>CODIGO: YP543 S/1.5 X UNIDAD</h4>
+                <h4>CODIGO: YP543<span class="reducedfrom"> <br> S/1.50</span>S/1.00</h4>
               </div>
               <img src="img/portfolio/YP543-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP544-L.jpg" title="CODIGO: YP544 S/4.50" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP544-L.jpg" title="CODIGO: YP544 S/3.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP544 S/4.50 X UNIDAD</h4>
+                <h4>CODIGO: YP544<span class="reducedfrom"> <br> S/4.50 </span>S/3.50</h4>
               </div>
               <img src="img/portfolio/YP544-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -4498,9 +4498,9 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP549-L.jpg" title="CODIGO: YP549 S/2.70" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP549-L.jpg" title="CODIGO: YP549 S/1.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP549 S/2.70 X UNIDAD</h4>
+                <h4>CODIGO: YP549<span class="reducedfrom"> <br> S/2.70</span>S/1.50</h4>
               </div>
               <img src="img/portfolio/YP549-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -4543,18 +4543,18 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP554-L.jpg" title="CODIGO: YP554 S/3.80" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP554-L.jpg" title="CODIGO: YP554 S/3.00" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP554 S/3.80 X UNIDAD</h4>
+                <h4>CODIGO: YP554<span class="reducedfrom"> <br> S/3.80</span>S/3.00</h4>
               </div>
               <img src="img/portfolio/YP554-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP555-L.jpg" title="CODIGO: YP555 S/7.50" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP555-L.jpg" title="CODIGO: YP555 S/5.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
-                <h4>CODIGO: YP555 S/7.50 X UNIDAD</h4>
+                <h4>CODIGO: YP555<span class="reducedfrom"> <br> S/7.50 </span>S/5.50</h4>
               </div>
               <img src="img/portfolio/YP555-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -4588,9 +4588,9 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP559-L.jpg" title="CODIGO: YP559 S/9.80" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP559-L.jpg" title="CODIGO: YP559 S/4.90" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP559 S/9.80</h4>
+                <h4>CODIGO: YP559<span class="reducedfrom"> <br> S/9.80</span>S/4.90</h4>
               </div>
               <img src="img/portfolio/YP559-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
