--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP533-L.jpg" title="CODIGO: YP533 S/10.90" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP533 S/10.90<completa></completa></h4>
+                <h4>CODIGO: YP533<span class="reducedfrom"> <br> S/10.90</span>S/9.50</h4>
               </div>
               <img src="img/portfolio/YP533-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
