--- a/index.html
+++ b/index.html
@@ -465,36 +465,36 @@
 		  
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP508-L.jpg" title="CODIGO: YP508 S/7" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP508-L.jpg" title="CODIGO: YP508 S/6.70" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
-                <h4>CODIGO: YP508 S/7</h4>
+                 <h4>CODIGO: YP508<span class="reducedfrom"> <br> S/7</span>S/6.70</h4>
               </div>
               <img src="img/portfolio/YP508-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP509-L.jpg" title="CODIGO: YP509 S/7" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP509-L.jpg" title="CODIGO: YP509 S/6.70" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP509 S/7</h4>
+                <h4>CODIGO: YP509<span class="reducedfrom"> <br> S/7</span>S/6.70</h4>
               </div>
               <img src="img/portfolio/YP509-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP510-L.jpg" title="CODIGO: YP510 S/7" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP510-L.jpg" title="CODIGO: YP510 S/6.70" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP510 S/7</h4>
+                <h4>CODIGO: YP510<span class="reducedfrom"> <br> S/7</span>S/6.70</h4>
               </div>
               <img src="img/portfolio/YP510-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP511-L.jpg" title="CODIGO: YP511 S/7" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP511-L.jpg" title="CODIGO: YP511 S/6.70" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP511 S/7</h4>
+               <h4>CODIGO: YP511<span class="reducedfrom"> <br> S/7</span>S/6.70</h4>
               </div>
               <img src="img/portfolio/YP511-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -690,7 +690,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP533-L.jpg" title="CODIGO: YP533 S/10.90" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP533-L.jpg" title="CODIGO: YP533 S/9.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP533<span class="reducedfrom"> <br> S/10.90</span>S/9.50</h4>
               </div>
