--- a/index.html
+++ b/index.html
@@ -256,27 +256,27 @@
         </div>
          <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP013-L.jpg" title="CODIGO: YP013 S/3.60" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP013-L.jpg" title="CODIGO: YP013 S/3.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP013 S/3.60</h4>
+                <h4>CODIGO: YP013<span class="reducedfrom"> <br> S/3.60</span>S/3.50</h4>
               </div>
               <img src="img/portfolio/YP013-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP014-L.jpg" title="CODIGO: YP014 S/3.60" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP014-L.jpg" title="CODIGO: YP014 S/3.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP014 S/3.60</h4>
+                <h4>CODIGO: YP014<span class="reducedfrom"> <br> S/3.60</span>S/3.50</h4>
               </div>
               <img src="img/portfolio/YP014-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP015-L.jpg" title="CODIGO: YP015 S/3.60" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP015-L.jpg" title="CODIGO: YP015 S/3.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4>CODIGO: YP015 S/3.60</h4>
+                <h4>CODIGO: YP015<span class="reducedfrom"> <br> S/3.60</span>S/3.50</h4>
               </div>
               <img src="img/portfolio/YP015-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
