--- a/index.html
+++ b/index.html
@@ -4149,7 +4149,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP408-L.jpg" title="CODIGO: YP408  S/34.70" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
-                <h4>CODIGO: YP408  S/34.70</h4>
+                <h4>CODIGO: YP408<span class="reducedfrom"> <br> S/34.70</span>S/33.20</h4>
               </div>
               <img src="img/portfolio/YP408-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
