--- a/index.html
+++ b/index.html
@@ -3821,16 +3821,16 @@
               <img src="img/portfolio/YP371-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-<!--        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
+        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP372-L.jpg" title="CODIGO: YP372" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP372-L.jpg" title="CODIGO: YP372  S/3.90" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
-                <h4>CODIGO: YP372</h4>
+                <h4>CODIGO: YP372  S/.3.90</h4>
               </div>
               <img src="img/portfolio/YP372-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
+     <!--   <div class="col-sm-6 col-md-4 col-lg-4 papeleria">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP373-L.jpg" title="CODIGO: YP373" data-lightbox-gallery="gallery1">
               <div class="hover-text">
