--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 cuaderno">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP512-L.jpg" title="CODIGO: YP512 S/5.90" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP512-L.jpg" title="CODIGO: YP512 S/5.90 X 80 HOJAS" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>CODIGO: YP512 S/5.9</h4>
               </div>
