--- a/index.html
+++ b/index.html
@@ -3703,9 +3703,9 @@
         </div>
 <!--        <div class="col-sm-6 col-md-4 col-lg-4 lapiz">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/YP359-L.jpg" title="CODIGO: YP359" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/YP359-L.jpg" title="CODIGO: YP359  S/0.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
-                <h4>CODIGO: YP359</h4>
+                <h4>CODIGO: YP359  S/0.50</h4>
               </div>
               <img src="img/portfolio/YP359-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
