--- a/index.html
+++ b/index.html
@@ -3701,7 +3701,7 @@
               <img src="img/portfolio/YP358-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-<!--        <div class="col-sm-6 col-md-4 col-lg-4 lapiz">
+      <div class="col-sm-6 col-md-4 col-lg-4 lapiz">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP359-L.jpg" title="CODIGO: YP359  S/0.50" data-lightbox-gallery="gallery1">
               <div class="hover-text">	
@@ -3710,7 +3710,7 @@
               <img src="img/portfolio/YP359-S.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
--->        <div class="col-sm-6 col-md-4 col-lg-4 lapiz">
+        <div class="col-sm-6 col-md-4 col-lg-4 lapiz">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/YP360-L.jpg" title="CODIGO: YP360  S/0.70" data-lightbox-gallery="gallery1">
               <div class="hover-text">
